<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnSave"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/save"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSave"
        android:layout_alignLeft="@id/btnSave"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:layout_toRightOf="@id/btnDelete"
        android:layout_alignTop="@id/btnDelete"/>

    <Button
        android:id="@+id/btnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnDelete"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"
        android:width="130dp"
        android:text="@string/to_main_activity" />

    <Button
        android:id="@+id/btnToLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/btnDelete"
        android:layout_marginTop="100dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="30dp"
        android:width="130dp"
        android:text="@string/to_linear_layout" />

</RelativeLayout>