<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*"
    android:background="#ffffff">

    <!-- Row 1 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_row_1"
            android:layout_span="3"
            android:padding="20dp"
            android:background="#2196F3"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"/>

    </TableRow>

    <!-- Row 2 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_2_column_1"
            android:padding="20dp"
            android:background="#64FFDA"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_2_column_2"
            android:padding="20dp"
            android:background="#64FFDA"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_2_column_3"
            android:padding="20dp"
            android:background="#64FFDA"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"/>

    </TableRow>

    <!-- Row 3 Starts From Here -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_3_column_1"
            android:background="#FFE0B2"
            android:padding="20dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFE0B2"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/row_3_column_2"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_3_column_3"
            android:padding="20dp"
            android:background="#FFE0B2"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"/>

    </TableRow>

    <!-- Row 4 Starts From Here -->

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_4_column_1"
            android:padding="20dp"
            android:background="#FFCCBC"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/row_4_column_2"
            android:padding="20dp"
            android:background="#FFCCBC"
            android:textColor="#000000"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1" />

    </TableRow>

    <!-- Row 5 Starts From Here -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_row_5"
            android:layout_span="3"
            android:padding="20dp"
            android:background="#2196F3"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center"/>

    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="40"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="300dp"
        android:paddingTop="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" >

        <Button
            android:id="@+id/btnToTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:width="130dp"
            android:text="@string/to_table_layout" />

        <Button
            android:id="@+id/btnToRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:width="130dp"
            android:text="@string/to_recyclerview" />
    </LinearLayout>
</TableLayout>